--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Lista de Contatos Internos</title>
 
     <!-- Ícone da aba -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/shUrazindev/ram/refs/heads/main/icon.ico" type="image/x-icon">
 
     <style>
         body {
@@ -62,7 +62,7 @@
 <body>
 
 <header>
-    <img src="logo.png" alt="Logo da Empresa">
+    <img src="https://raw.githubusercontent.com/shUrazindev/ram/refs/heads/main/logo.png" alt="Logo">
     <h1>Contatos Internos</h1>
 </header>
 
@@ -90,26 +90,47 @@
     // 👇 CADASTRO DOS CONTATOS (EDITA AQUI)
     const contatos = [
         {
-            nome: "João Silva",
-            setor: "Manutenção",
-            localizacao: "Bloco A",
-            radio: "Faixa 3 / Rádio 12",
-            ramal: "203"
-        },
-        {
-            nome: "Maria Santos",
-            setor: "RH",
-            localizacao: "Bloco B",
-            radio: "Faixa 1 / Rádio 5",
-            ramal: "110"
-        },
-        {
-            nome: "Carlos Lima",
+            nome: "Adão",
             setor: "TI",
-            localizacao: "Sala 12",
-            radio: "Faixa 2 / Rádio 8",
-            ramal: "150"
-        }
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4116"
+        },
+        {
+            nome: "Afonso",
+            setor: "Contabilidade",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4005"
+        },
+        {
+            nome: "Alair / Marcondes",
+            setor: "Contabilidade",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4018"
+        },
+        {
+            nome: "N/A",
+            setor: "Associação",
+            localizacao: "Associação",
+            radio: "N/A",
+            ramal: "4002"
+        },
+         {
+            nome: "N/A",
+            setor: "Escritório",
+            localizacao: "Associação",
+            radio: "N/A",
+            ramal: "4089"
+        },
+        {
+            nome: "Ezequiel",
+            setor: "Almoxarifado",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6421"
+        },
     ];
 
     function renderTable(data) {
@@ -149,4 +170,5 @@
 </script>
 
 </body>
+
 </html>
