--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
         }
 
         input {
-            width: 100%;
-            padding: 10px;
-            margin-bottom: 15px;
-            font-size: 16px;
+            width: 40%;
+            max-width: 400px
+            padding: 7px 10px;
+            margin-bottom: 0 auto 15px auto;
+            display: block;
+            font-size: 14px;
         }
 
         table {
@@ -172,3 +174,4 @@
 </body>
 
 </html>
+
