--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
         }
 
         input {
-            width: 60%;
-            max-width: 500px
-            padding: 8px 10px;
-            margin-bottom: 0 auto 15px auto;
-            display: block;
-            font-size: 15px;
+            width: 95%;
+            padding: 10px;
+            margin-bottom: 15px;
+            font-size: 16px;
         }
 
         table {
@@ -174,5 +172,6 @@
 </body>
 
 </html>
+
 
 
