--- a/index.html
+++ b/index.html
@@ -30,11 +30,17 @@
             margin: 0;
         }
 
+        .container {
+            width: 80%;
+            max-width: 1000px;
+            margin: 0 auto;
+        }
+
         input {
             width: 100%;
-            padding: 10px;
+            padding: 8px 10px;
             margin-bottom: 15px;
-            font-size: 16px;
+            font-size: 15px;
         }
 
         table {
@@ -65,6 +71,7 @@
     <img src="https://raw.githubusercontent.com/shUrazindev/ram/refs/heads/main/logo.png" alt="Logo">
 </header>
 
+<dic class="container">    
 <input 
     type="text" 
     id="searchInput" 
@@ -73,6 +80,7 @@
 >
 
 <table>
+</div>
     <thead>
         <tr>
             <th>Nome</th>
@@ -171,6 +179,7 @@
 </body>
 
 </html>
+
 
 
 
