--- a/index.html
+++ b/index.html
@@ -30,15 +30,10 @@
             margin: 0;
         }
 
-        .container {
-            width: 80%;
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-
         input {
             width: 100%;
-            padding: 8px 10px;
+            margin: 0 auto;
+            padding: 10px;
             margin-bottom: 15px;
             font-size: 15px;
         }
@@ -71,7 +66,6 @@
     <img src="https://raw.githubusercontent.com/shUrazindev/ram/refs/heads/main/logo.png" alt="Logo">
 </header>
 
-<dic class="container">    
 <input 
     type="text" 
     id="searchInput" 
@@ -80,7 +74,6 @@
 >
 
 <table>
-</div>
     <thead>
         <tr>
             <th>Nome</th>
@@ -179,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
