--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
         }
 
         input {
-            width: 100%;
-            margin: 0 auto;
-            padding: 10px;
-            margin-bottom: 15px;
-            font-size: 15px;
+            width: 90%;
+            margin: 0 auto 15px auto;
+            display: block;
         }
 
         table {
-            width: 100%;
+            width: 90%;
+            margin: 0 auto;
             border-collapse: collapse;
             background: white;
         }
@@ -172,6 +171,7 @@
 </body>
 
 </html>
+
 
 
 
