--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
             margin: 0;
         }
 
-        input {
-            width: 90%;
-            margin: 0 auto 20px auto;
-            display: block;
+         input {
+            width: 98%;
+            padding: 10px;
+            margin-bottom: 15px;
+            font-size: 15px;
         }
 
         table {
             width: 100%;
-            margin: 0 auto;
             border-collapse: collapse;
             background: white;
         }
@@ -50,7 +50,7 @@
         }
 
         th {
-            background: #2c3e50;
+            background: #22c55e;
             color: white;
         }
 
@@ -171,6 +171,7 @@
 </body>
 
 </html>
+
 
 
 
