--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         }
 
         th {
-            background: #22c55e;
+            background: #166534;
             color: white;
         }
 
         tr:hover {
-            background: #f1f1f1;
+            background: #22c55e;
         }
     </style>
 </head>
@@ -171,6 +171,7 @@
 </body>
 
 </html>
+
 
 
 
