--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 
         tr:hover {
             background: #22c55e;
+            color: white
         }
     </style>
 </head>
@@ -171,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
