--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         }
 
          input {
-            width: 98%;
+            width: 99%;
             padding: 10px;
-            margin-bottom: 15px;
+            margin-bottom: 15px solid #ddd;
             font-size: 15px;
         }
 
@@ -172,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
