--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
             margin: 0;
         }
 
-         input {
+         input { 
             width: 99%;
             padding: 10px;
-            margin-bottom: 15px solid #ddd;
+            margin-bottom: 15px;
             font-size: 15px;
         }
 
@@ -50,12 +50,12 @@
         }
 
         th {
-            background: #22c55e;
+            background: #DDDDDD;
             color: white;
         }
 
         tr:hover {
-            background: #166534;
+            background: #22c55e;
             color: white
         }
     </style>
@@ -172,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
