--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         }
 
         th {
-            background: #DDDDDD;
+            background: #8a8a8a;
             color: white;
         }
 
@@ -172,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
