--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         }
 
         th {
-            background: #8a8a8a;
+            background: #6b6b6b;
             color: white;
         }
 
         tr:hover {
-            background: #22c55e;
+            background: #dddddd;
             color: white
         }
     </style>
@@ -172,6 +172,7 @@
 </body>
 
 </html>
+
 
 
 
