--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Contatos Internos</title>
+    <title>Lista de Ramais</title>
 
     <!-- Ícone da aba -->
     <link rel="icon" href="https://raw.githubusercontent.com/shUrazindev/ram/refs/heads/main/icon.ico" type="image/x-icon">
@@ -171,6 +171,7 @@
 </body>
 
 </html>
+
 
 
 
