--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ header {
     max-width: 1100px;
     margin: 0 auto 25px auto;
     display: flex;
-    align-items: center;
+    align-items: left;
     gap: 16px;
 }
 
