--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ header {
     max-width: 1100px;
     margin: 0 auto 25px auto;
     display: flex;
-    align-items: left;
+    align-items: center;
     gap: 16px;
 }
 
@@ -210,6 +210,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
