--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ input::placeholder {
 
 input:focus {
     outline: none;
-    border-color: #3b82f6;
+    border-color: #22c55e;
     box-shadow: 0 0 0 3px rgba(59,130,246,0.15);
 }
 
@@ -92,7 +92,7 @@ td {
 }
 
 tr:hover td {
-    background: #f9fafb;
+    background: #e5e7eb;
 }
     </style>
 </head>
@@ -210,6 +210,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
