--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ td {
 }
 
 tr:hover td {
-    background: #e5e7eb;
+    background: #dcdfe3;
 }
     </style>
 </head>
@@ -210,6 +210,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
