--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@ tr:hover td {
 </table>
 </div>
 
+<footer>
+  © 2026 shUrazin
+</footer>
+
 <script>
     // 👇 CADASTRO DOS CONTATOS (EDITA AQUI)
     const contatos = [
@@ -210,6 +214,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
