--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ tr:hover td {
         },
         {
             nome: "Antônio Carlos",
-            setor: "Ger. de Planejamento Agrícola",
+            setor: "Gerente de Planejamento Agrícola",
             localizacao: "Agrícola",
             radio: "N/A",
             ramal: "6475"
@@ -205,21 +205,21 @@ tr:hover td {
         },
         {
             nome: "Adriana / Flávia",
-            setor: "Ger. de Planejamento Agrícola",
+            setor: "Gerente de Planejamento Agrícola",
             localizacao: "Agrícola",
             radio: "Faixa 2 / 01",
             ramal: "6469"
         },
         {
-            nome: "N/A",
+            nome: "Operadores",
             setor: "Balança",
             localizacao: "Indústria",
             radio: "N/A",
             ramal: "6442"
         },
         {
-            nome: "N/A",
-            setor: "Balcão",
+            nome: "Balcão (Encarregados)",
+            setor: "Almoxarifado",
             localizacao: "Indústria",
             radio: "N/A",
             ramal: "6420"
@@ -244,6 +244,202 @@ tr:hover td {
             localizacao: "Indústria",
             radio: "N/A",
             ramal: "6452"
+        },
+        {
+            nome: "Célio Jarbas",
+            setor: "Supervisor de Utilidades",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 031",
+            ramal: "6454"
+        },
+        {
+            nome: "Carlos Nogueira",
+            setor: "Folha de Pagamento",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4152"
+        },
+        {
+            nome: "Operadores",
+            setor: "Caldeira",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 012",
+            ramal: "4031"
+        },
+        {
+            nome: "N/A",
+            setor: "Casa de Força",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 013",
+            ramal: "4192"
+        },
+        {
+            nome: "N/A",
+            setor: "Casa Sede",
+            localizacao: "Agrícola",
+            radio: "N/A",
+            ramal: "6461"
+        },
+        {
+            nome: "Operadores",
+            setor: "Captação",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 028",
+            ramal: "4076"
+        },
+        {
+            nome: "Operadores",
+            setor: "Carregamento de Etanol",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6432"
+        },
+        {
+            nome: "N/A",
+            setor: "Comboio",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 038",
+            ramal: "N/A"
+        },
+        {
+            nome: "Devanir",
+            setor: "SESMT",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4151"
+        },
+        {
+            nome: "Divino Cunha",
+            setor: "Encarregado da Limpeza e Manutenção",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 035",
+            ramal: "4045"
+        },
+        {
+            nome: "Operadores",
+            setor: "Destilaria",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 014",
+            ramal: "4027"
+        },
+        {
+            nome: "Denusa",
+            setor: "RH",
+            localizacao: "N/A",
+            radio: "N/A",
+            ramal: "(64)98115-9243"
+        },
+        {
+            nome: "Denisla Prado",
+            setor: "Arquivo Morto",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4087"
+        },
+        {
+            nome: "Duarte",
+            setor: "Supervisor Elétrica",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 06",
+            ramal: "4135"
+        },
+        {
+            nome: "Emanuel / Deuzenir",
+            setor: "Engenheiro Mecânico",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 018",
+            ramal: "4010"
+        },
+        {
+            nome: "Operadores",
+            setor: "Elétrica",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 08",
+            ramal: "N/A"
+        },
+        {
+            nome: "Euler",
+            setor: "Preparo de Solo",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 082",
+            ramal: "(82)98136-4121"
+        },
+        {
+            nome: "Encarregado",
+            setor: "Moenda",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 026",
+            ramal: "N/A"
+        },
+        {
+            nome: "Edna",
+            setor: "Máquinas",
+            localizacao: "N/A",
+            radio: "N/A",
+            ramal: "(64)98140-6261"
+        },
+        {
+            nome: "N/A",
+            setor: "Fábrica de Levedura",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4193"
+        },
+        {
+            nome: "Operadores",
+            setor: "Fermentação",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 015",
+            ramal: "N/A"
+        },
+        {
+            nome: "N/A",
+            setor: "Hillo",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 021",
+            ramal: "N/A"
+        },
+        {
+            nome: "Humberto Barbosa",
+            setor: "Gestor de Alimentos",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6412"
+        },
+        {
+            nome: "Hillux",
+            setor: "Elétrica",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 023",
+            ramal: "N/A"
+        },
+        {
+            nome: "José Enildo",
+            setor: "N/A",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 07",
+            ramal: "6416"
+        },
+        {
+            nome: "Zacarias",
+            setor: "N/A",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 032",
+            ramal: "6416"
+        },
+        {
+            nome: "Jonathas",
+            setor: "Supervisor de Instrumentação",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 019",
+            ramal: "4054"
+        },
+        {
+            nome: "Encarregado",
+            setor: "TI",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6450 / 6437"
         },
     ];
 
@@ -285,6 +481,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
