--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ table {
 }
 
 th {
-    background: #22c55e;
+    background: #e5e7eb;
     color: #374151;
     font-size: 13px;
     font-weight: 600;
@@ -621,6 +621,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
