--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ tr:hover td {
             setor: "RH",
             localizacao: "N/A",
             radio: "N/A",
-            ramal: "(64)98115-9243"
+            ramal: "(64) 98115-9243"
         },
         {
             nome: "Denisla Prado",
@@ -362,7 +362,7 @@ tr:hover td {
             setor: "Preparo de Solo",
             localizacao: "Indústria",
             radio: "Faixa 6 / 082",
-            ramal: "(82)98136-4121"
+            ramal: "(82) 98136-4121"
         },
         {
             nome: "Encarregado",
@@ -453,7 +453,7 @@ tr:hover td {
             setor: "Laboratório",
             localizacao: "Indústria",
             radio: "Faixa 6 / 04",
-            ramal: "4026 / (64)99334-4624"
+            ramal: "4026 / (64) 99334-4624"
         },
         {
             nome: "Operadores",
@@ -581,6 +581,258 @@ tr:hover td {
             radio: "N/A",
             ramal: "(64)98124-4544"
         },
+        {
+            nome: "Nilza",
+            setor: "Engenheira Ambiental",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4011"
+        },
+        {
+            nome: "Neuza Aoki",
+            setor: "Engenheira Química",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 03",
+            ramal: "6428"
+        },
+        {
+            nome: "N/A",
+            setor: "Núcleo",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4090"
+        },
+        {
+            nome: "Osmar",
+            setor: "Encarregado PIPA",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 028",
+            ramal: "N/A"
+        },
+        {
+            nome: "N/A",
+            setor: "Posto",
+            localizacao: "Agrícola",
+            radio: "N/A",
+            ramal: "4086"
+        },
+        {
+            nome: "Paulo Roberto",
+            setor: "Diretor Industrial",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 02",
+            ramal: "6456 / 6425"
+        },
+        {
+            nome: "Paulo Barbosa",
+            setor: "Diretoria",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6467"
+        },
+        {
+            nome: "Paulo Sousa",
+            setor: "Marketing",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4194"
+        },
+        {
+            nome: "João Carlos Paiva",
+            setor: "Diretoria",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6413"
+        },
+        {
+            nome: "Operadores",
+            setor: "Portaria",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 779",
+            ramal: "6439 / 6440"
+        },
+        {
+            nome: "Operadores",
+            setor: "Portaria",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 778",
+            ramal: "6464"
+        },
+        {
+            nome: "N/A",
+            setor: "Ponte",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 023",
+            ramal: "N/A"
+        },
+        {
+            nome: "Operadores",
+            setor: "Portaria Indústria Mecanizada",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 014",
+            ramal: "N/A"
+        },
+        {
+            nome: "Operadores",
+            setor: "Caminhão PIPA",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 066",
+            ramal: "N/A"
+        },
+        {
+            nome: "Pedro Barbosa",
+            setor: "N/A",
+            localizacao: "N/A",
+            radio: "N/A",
+            ramal: "6430"
+        },
+        {
+            nome: "Renata",
+            setor: "Recepção Supervisores",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6430"
+        },
+        {
+            nome: "Operadores",
+            setor: "Refeitório",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6417"
+        },
+        {
+            nome: "Operadores",
+            setor: "Refeitório",
+            localizacao: "Agrícola",
+            radio: "N/A",
+            ramal: "4062"
+        },
+        {
+            nome: "Thiago / Raquel / Leylane",
+            setor: "RH",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4153 / 4149"
+        },
+        {
+            nome: "Operadores",
+            setor: "TI",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "4008"
+        },
+        {
+            nome: "Sérgio Dutra",
+            setor: "Encarregado da Balança",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6441"
+        },
+        {
+            nome: "Operadores",
+            setor: "Sala da Moenda",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 09",
+            ramal: "4006"
+        },
+        {
+            nome: "N/A",
+            setor: "Sala de Reunião (Diretoria)",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6407"
+        },
+        {
+            nome: "N/A",
+            setor: "Tratamento de Água (E.T.A.)",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 016",
+            ramal: "6459"
+        },
+        {
+            nome: "N/A",
+            setor: "Tratamento de Calda",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 011 / 027",
+            ramal: "4038"
+        },
+        {
+            nome: "Thiago Dornelas",
+            setor: "Financeiro",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6403"
+        },
+        {
+            nome: "Eliezer",
+            setor: "TI",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6443"
+        },
+        {
+            nome: "N/A",
+            setor: "Contabilidade",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6418 / 6437"
+        },
+        {
+            nome: "Ubedio",
+            setor: "Supervisor Industrial",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 04",
+            ramal: "6454"
+        },
+        {
+            nome: "Adeir",
+            setor: "Supervisor Industrial",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 025",
+            ramal: "6454"
+        },
+        {
+            nome: "Anibal",
+            setor: "Supervisor Industrial",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 030",
+            ramal: "6454"
+        },
+        {
+            nome: "Wellington Paiva",
+            setor: "Gerente de Controladoria",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6409"
+        },
+        {
+            nome: "Operadores",
+            setor: "Segurança do Trabalho",
+            localizacao: "Indústria",
+            radio: "Faixa 6 / 029",
+            ramal: "4146"
+        },
+        {
+            nome: "Operadores",
+            setor: "Segurança do Trabalho",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 078",
+            ramal: "7198"
+        },
+        {
+            nome: "N/A",
+            setor: "Xerox Administração",
+            localizacao: "Indústria",
+            radio: "N/A",
+            ramal: "6448"
+        },
+        {
+            nome: "Plantão",
+            setor: "TI",
+            localizacao: "N/A",
+            radio: "N/A",
+            ramal: "(64) 98123-0415"
+        },
     ];
 
     function renderTable(data) {
@@ -621,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
