--- a/index.html
+++ b/index.html
@@ -833,6 +833,13 @@ tr:hover td {
             radio: "N/A",
             ramal: "(64) 98123-0415"
         },
+        {
+            nome: "Operadores",
+            setor: "OS",
+            localizacao: "Agrícola",
+            radio: "Faixa 2 / 052",
+            ramal: "N/A"
+        },
     ];
 
     function renderTable(data) {
@@ -873,6 +880,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
