--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@ tr:hover td {
         },
         {
             nome: "Mauricio",
-            setor: "Refeitório",
+            setor: "Restaurante",
             localizacao: "Indústria",
             radio: "N/A",
             ramal: "6410"
@@ -688,14 +688,14 @@ tr:hover td {
         },
         {
             nome: "Operadores",
-            setor: "Refeitório",
+            setor: "Restaurante",
             localizacao: "Indústria",
             radio: "N/A",
             ramal: "6417"
         },
         {
             nome: "Operadores",
-            setor: "Refeitório",
+            setor: "Restaurante",
             localizacao: "Agrícola",
             radio: "N/A",
             ramal: "4062"
@@ -873,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
