--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ tr:hover td {
             ramal: "6442"
         },
         {
-            nome: "Balcão (Encarregados)",
+            nome: "Operadores (Balcão)",
             setor: "Almoxarifado",
             localizacao: "Indústria",
             radio: "N/A",
@@ -873,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
