--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ tr:hover td {
         {
             nome: "Benedito Barbosa",
             setor: "Diretor Industrial",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Sala dos Supervisores)",
             radio: "N/A",
             ramal: "6422"
         },
@@ -486,7 +486,7 @@ tr:hover td {
         {
             nome: "Luiz Fernando Barbosa",
             setor: "Diretoria",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Diretoria)",
             radio: "N/A",
             ramal: "6404"
         },
@@ -527,7 +527,7 @@ tr:hover td {
         },
         {
             nome: "Mauricio Trindade",
-            setor: "Gerente de RH",
+            setor: "Gerente de RH (Diretoria)",
             localizacao: "Indústria",
             radio: "N/A",
             ramal: "6415"
@@ -556,7 +556,7 @@ tr:hover td {
         {
             nome: "Marcelo Barbosa",
             setor: "Controle Industrial",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Diretoria)",
             radio: "Faixa 6 / 024",
             ramal: "6411"
         },
@@ -612,28 +612,28 @@ tr:hover td {
         {
             nome: "Paulo Roberto",
             setor: "Diretor Industrial",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Sala dos Supervisores)",
             radio: "Faixa 6 / 02",
             ramal: "6456 / 6425"
         },
         {
             nome: "Paulo Barbosa",
             setor: "Diretoria",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Diretoria)",
             radio: "N/A",
             ramal: "6467"
         },
         {
             nome: "Paulo Sousa",
             setor: "Marketing",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Diretoria)",
             radio: "N/A",
             ramal: "4194"
         },
         {
             nome: "João Carlos Paiva",
             setor: "Diretoria",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Diretoria)",
             radio: "N/A",
             ramal: "6413"
         },
@@ -873,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
