--- a/index.html
+++ b/index.html
@@ -527,8 +527,8 @@ tr:hover td {
         },
         {
             nome: "Mauricio Trindade",
-            setor: "Gerente de RH (Diretoria)",
-            localizacao: "Indústria",
+            setor: "Gerente de RH",
+            localizacao: "Indústria (Diretoria)",
             radio: "N/A",
             ramal: "6415"
         },
@@ -794,7 +794,7 @@ tr:hover td {
         {
             nome: "Wellington Paiva",
             setor: "Gerente de Controladoria",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Diretoria)",
             radio: "N/A",
             ramal: "6409"
         },
@@ -873,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
