--- a/index.html
+++ b/index.html
@@ -730,8 +730,8 @@ tr:hover td {
         },
         {
             nome: "N/A",
-            setor: "Sala de Reunião (Diretoria)",
-            localizacao: "Indústria",
+            setor: "Sala de Reunião",
+            localizacao: "Indústria (Diretoria)",
             radio: "N/A",
             ramal: "6407"
         },
@@ -873,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
