--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ tr:hover td {
         {
             nome: "Claudicene / Maria",
             setor: "Recepção Industrial",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Diretoria)",
             radio: "N/A",
             ramal: "9 / 6401"
         },
@@ -682,7 +682,7 @@ tr:hover td {
         {
             nome: "Renata",
             setor: "Recepção Supervisores",
-            localizacao: "Indústria",
+            localizacao: "Indústria (Sala dos Supervisores)",
             radio: "N/A",
             ramal: "6430"
         },
@@ -873,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
