--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ tr:hover td {
             ramal: "6416"
         },
         {
-            nome: "Jonathas",
+            nome: "Jonathan",
             setor: "Supervisor de Instrumentação",
             localizacao: "Indústria",
             radio: "Faixa 6 / 019",
@@ -873,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
