--- a/index.html
+++ b/index.html
@@ -161,13 +161,6 @@ tr:hover td {
             radio: "N/A",
             ramal: "4089"
         },
-        {
-            nome: "Ezequiel",
-            setor: "Almoxarifado",
-            localizacao: "Indústria",
-            radio: "N/A",
-            ramal: "6421"
-        },
          {
             nome: "EPI",
             setor: "Almoxarifado",
@@ -701,7 +694,7 @@ tr:hover td {
             ramal: "4062"
         },
         {
-            nome: "Thiago / Raquel / Leylane",
+            nome: "Thiago / Raquel",
             setor: "RH",
             localizacao: "Indústria",
             radio: "N/A",
@@ -873,6 +866,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
