--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@ tr:hover td {
             setor: "Associação",
             localizacao: "Associação",
             radio: "N/A",
-            ramal: "4002"
+            ramal: "4089"
         },
          {
             nome: "N/A",
             setor: "Escritório",
             localizacao: "Associação",
             radio: "N/A",
-            ramal: "4089"
+            ramal: "4002"
         },
          {
             nome: "EPI",
@@ -223,6 +223,13 @@ tr:hover td {
             localizacao: "Indústria (Sala dos Supervisores)",
             radio: "N/A",
             ramal: "6422"
+        },
+        {
+            nome: "Operadores",
+            setor: "Biofabrica",
+            localizacao: "Agrícola",
+            radio: "N/A",
+            ramal: "4118"
         },
         {
             nome: "Claudicene / Maria",
@@ -866,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
