--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ tr:hover td {
         },
         {
             nome: "Operadores",
-            setor: "Biofabrica",
+            setor: "Biofábrica",
             localizacao: "Agrícola",
             radio: "N/A",
             ramal: "4118"
@@ -873,6 +873,7 @@ tr:hover td {
 </body>
 
 </html>
+
 
 
 
